--- a/source/presentation/_index.scss
+++ b/source/presentation/_index.scss
@@ -3,3 +3,5 @@
 @import "tools/mixins/index";
 @import "generic/index";
 @import "base/index";
+@import "objects/index";
+@import "components/index";
